tests/int/why_command/snapshots/integration__int__why_command__bin_only__should_why_bin_only.snap
---
source: tests/int/why_command/bin_only.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/bin_only
    - why
    - main
    - config
---
success: true
exit_code: 0
----- stdout -----
crate::config::Config

----- stderr -----
